@@ -258,6 +258,7 @@ void MakeRichCursor(rfbScreenInfoPtr rfbScreen)
   c->xhot = 16; c->yhot = 24;
 
   c->richSource = (char*)malloc(w*h*bpp);
+  c->cleanupRichSource = TRUE;
   for(j=0;j<h;j++) {
     for(i=0;i<w;i++) {
       c->richSource[j*w*bpp+i*bpp+0]=i*0xff/w;
