@@ -1,6 +1,9 @@
 2005-05-14  Karl Runge <runge@karlrunge.com>
 	* x11vnc: more work on -scrollcopyrect and -xkb modes.
 
+2005-05-13  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
+	* libvncserver/{main,rfbserver,sockets}.c: fix memory leaks (valgrind)
+
 2005-05-07  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
 	* libvncserver/rfbserver.c: fix memory leak pointed out by Tim Jansen
 	* libvncserver/{httpd,main,rfbserver,sockets}.c, rfb/rfb.h:
